display projects as grid and fix spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -118,6 +118,7 @@ img {
     margin-top: 7px;
   }
 }
+
 .front-end {
   margin-top: 30px;
   display: grid;
@@ -134,4 +135,33 @@ i {
   font-size: 5rem;
   color: $main-color;
   margin-bottom: 10px;
+}
+
+// Projects
+.projects {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+  justify-content: center;
+  margin: 30px;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 1rem;
+  margin: 30px;
+
+  p {
+    align-self: center;
+  }
+
+  h3 {
+    justify-self: center;
+  }
+
+  i {
+    margin-bottom: 5px;
+    justify-self: center;
+  }
 }
